--- a/salaserver/03-kvm.yaml
+++ b/salaserver/03-kvm.yaml
@@ -1,6 +1,8 @@
 ---
 - hosts: all
   become: true
+  vars:
+    my_pass: "{{ lookup('password', '/tmp/passwordfile length=15 chars=ascii_letters') }}"
   vars_files:
     - vars/common_vars.yaml
 
@@ -13,6 +15,7 @@
           - libvirt-clients 
           - bridge-utils 
           - libvirt-daemon-system
+          - guestfs-tools
         state: latest
         update_cache: true
 
@@ -22,7 +25,7 @@
         state: directory
         mode: '0750'
         owner: "{{ server_username }}"
-        group: "{{ ansible_username }}"
+        group: "libvirt-qemu"
 
     - name: create /srv/data/iso folder
       file:
@@ -38,55 +41,53 @@
         state: directory
         mode: '0770'
         owner: "{{ server_username }}"
-        group: "{{ ansible_username }}"
-
-    - name: check if img file exists
-      stat:
-        path: "/srv/data/iso/{{ ubuntu_img_file }}"
-      register: ubuntu_file_status
-
-    - name: download ubuntu image (if not exists)
-      get_url:
-        url: "{{ ubuntu_img_url }}"
-        dest: /srv/data/iso
-        mode: '0750'
-        group: "{{ server_username }}"
-        owner: "{{ server_username }}"
-      when: not ubuntu_file_status.stat.exists
-
-    - name: check if qcow2 file exists
-      stat:
-        path: "/srv/data/img/{{ ubuntu_img_file }}.qcow2"
-      register: qcow2_file_status
-      
-    - name: convert img to qcow2
-      shell: |
-        qemu-img convert -f raw -O qcow2 "/srv/data/iso/{{ ubuntu_img_file }}" "/srv/data/img/{{ ubuntu_img_file }}.qcow2"
-        chown "{{ server_username }}":"{{ server_username }}" "/srv/data/img/{{ ubuntu_img_file }}.qcow2"
-        chmod 0750 "/srv/data/img/{{ ubuntu_img_file }}.qcow2"
-      when: not qcow2_file_status.stat.exists
+        group: "libvirt-qemu"
 
     - name: check if netplan bridge file exists
       stat:
         path: "/etc/netplan/01-bridge.yaml"
       register: bridge_file_status
 
-    - name: create bridge network
-      copy:
-        src: vars/01-bridge.yaml
-        dest: /etc/netplan/
-        mode: '0600'
-        group: root
-        owner: root 
+    - block:
+    
+        - name: create bridge network
+          copy:
+            src: vars/01-bridge.yaml
+            dest: /etc/netplan/
+            mode: '0600'
+            group: root
+            owner: root 
+
+        - name: check if netplan bridge file exists v2
+          stat:
+            path: "/etc/netplan/01-bridge.yaml"
+          register: bridge_file_v2_status
+          
+        - name: delete common network yaml file
+          file:
+            path: /etc/netplan/50-cloud-init.yaml
+            state: absent 
+          when: bridge_file_v2_status.stat.exists	        
+
+        - name: netplan apply
+          shell: |
+            sudo netplan apply
+            sleep 30
+
       when: not bridge_file_status.stat.exists
 
-    - name: check if netplan bridge file exists v2
-      stat:
-        path: "/etc/netplan/01-bridge.yaml"
-      register: bridge_file_status
       
-    - name: delete common network yaml file
-      file:
-        path: /etc/netplan/50-cloud-init.yaml
-        state: absent 
-      when: bridge_file_status.stat.exists
+    - name: copy bridger xml file
+      copy: 
+        src: vars/02-bridger-network.yaml 
+        dest: /tmp/
+        mode: '0600'
+        group: root
+        owner: root
+      
+    - name: create bridger network for KVM
+      shell: |
+        sudo virsh net-define /tmp/02-bridger-network.yaml
+        sudo virsh net-start bridged-network
+        sudo virsh net-autostart bridged-network 
+      
