--- a/salaserver/01-initial-setup.yaml
+++ b/salaserver/01-initial-setup.yaml
@@ -10,8 +10,16 @@
         name: aptitude
         state: latest
         update_cache: true
+        
+    - name: Create a new regular user with sudo privileges for Ansible
+      user:
+        name: "{{ ansible_username }}"
+        state: present
+        groups: sudo
+        append: true
+        create_home: true
 
-    - name: Setup passwordless sudo
+    - name: Setup passwordless sudo for Ansible user
       lineinfile:
         path: /etc/sudoers
         state: present
@@ -25,14 +33,6 @@
         state: present
         regexp: '^GRUB_CMDLINE_LINUX_DEFAULT'
         line: 'GRUB_CMDLINE_LINUX_DEFAULT="mitigations=off"'
-
-    - name: Create a new regular user with sudo privileges
-      user:
-        name: "{{ server_username }}"
-        state: present
-        groups: sudo
-        append: true
-        create_home: true
 
     - name: Set authorized key for remote user
       ansible.posix.authorized_key:
