--- a/salaserver/04-ubuntu-vm-preparation.yaml
+++ b/salaserver/04-ubuntu-vm-preparation.yaml
@@ -60,7 +60,7 @@
              --uninstall openssh-server \
              --firstboot-install openssh-server \
              --firstboot-command "growpart /dev/vda 1" \
-             --firstboot-command "resize2fs /dev/vda1"
+             --firstboot-command "resize2fs /dev/vda1" \
            rm /tmp/passwordfile
 
       when: not ubuntu_file_status.stat.exists
