--- a/salaserver/vars/01-bridge.yaml
+++ b/salaserver/vars/01-bridge.yaml
@@ -8,7 +8,7 @@ network:
     br0:
       interfaces: [enp3s0]
       dhcp4: false
-      addresses: [192.168.0.241/24,192.168.0.201/24]
+      addresses: [192.168.0.241/24,192.168.0.201/24,10.192.168.201/24]
       routes:
         - to: default
           via: 192.168.0.1
