--- a/k8s-vms/01-vm-initial-setup.yaml
+++ b/k8s-vms/01-vm-initial-setup.yaml
@@ -10,6 +10,9 @@
       apt:
         pkg:
           - munin-node
+          - apt-transport-https
+          - ca-certificates
+          - curl
         state: latest
         update_cache: true
 
