--- a/salaserver/02-docker.yaml
+++ b/salaserver/02-docker.yaml
@@ -2,7 +2,7 @@
 - hosts: all
   become: true
   vars_files:
-    - vars/common_vars.yaml
+    - ../vars/common_vars.yaml
 
   tasks:
     - name: Install aptitude
