--- a/salaserver/03-kvm.yaml
+++ b/salaserver/03-kvm.yaml
@@ -45,6 +45,14 @@
         owner: "{{ server_username }}"
         group: "libvirt-qemu"
 
+    - name: create /srv/data/virtiofs folder
+      file:
+        path: /srv/data/virtiofs
+        state: directory
+        mode: '0770'
+        owner: "libvirt-qemu"
+        group: "{{ server_username }}"
+
     - name: check if netplan bridge file exists
       stat:
         path: "/etc/netplan/01-bridge.yaml"
