--- a/salaserver/01-initial-setup.yaml
+++ b/salaserver/01-initial-setup.yaml
@@ -106,6 +106,14 @@
         state: latest
         update_cache: true
       when: "'servers' in group_names"
+
+    - name: Copy shutdown script
+      copy:
+        src: vars/shut.sh
+        dest: /usr/local/bin/shut
+        mode: '0750'
+        group: root
+        owner: "{{ server_username }}"
       
  
 
