--- a/salaserver/03-kvm.yaml
+++ b/salaserver/03-kvm.yaml
@@ -85,6 +85,14 @@
         owner: "libvirt-qemu"
         group: "{{ server_username }}"
 
+    - name: create /srv/data/virtiofs folder for sharing into VMs as Persistent Volume - elasticsearch
+      file:
+        path: /srv/data/virtiofs/elastic
+        state: directory
+        mode: '0777'
+        owner: "libvirt-qemu"
+        group: "{{ server_username }}"
+
     - name: check if netplan bridge file exists
       stat:
         path: "/etc/netplan/01-bridge.yaml"
