--- a/salaserver/01-initial-setup.yaml
+++ b/salaserver/01-initial-setup.yaml
@@ -8,7 +8,7 @@
   
     - name: Update all packages to the latest version
       apt:
-        upgrade: dist
+        upgrade: full
   
     - name: Install aptitude
       apt:
