--- a/k8s-vms/02-vm-kube-config.yaml
+++ b/k8s-vms/02-vm-kube-config.yaml
@@ -39,4 +39,4 @@
               hour: "*"
               job: "/srv/data/do-port-forward.sh"
 
-      when: "'{{ controlplane_hostname }}' in inventory_hostname"
+      when: 'controlplane_hostname  | string in inventory_hostname'
