--- a/salaserver/01-initial-setup.yaml
+++ b/salaserver/01-initial-setup.yaml
@@ -50,12 +50,12 @@
         line: '{{ server_username }} ALL=(ALL) NOPASSWD: ALL'
         validate: '/usr/sbin/visudo -cf %s'
 
-    - name: Mitigations off
-      lineinfile:
-        path: /etc/default/grub
-        state: present
-        regexp: '^GRUB_CMDLINE_LINUX_DEFAULT'
-        line: 'GRUB_CMDLINE_LINUX_DEFAULT="mitigations=off"'
+    # - name: Mitigations off
+    #   lineinfile:
+    #     path: /etc/default/grub
+    #     state: present
+    #     regexp: '^GRUB_CMDLINE_LINUX_DEFAULT'
+    #     line: 'GRUB_CMDLINE_LINUX_DEFAULT="mitigations=off"'
 
     - name: Set timezone to Europe
       become: true
