--- a/salaserver/03-kvm.yaml
+++ b/salaserver/03-kvm.yaml
@@ -93,6 +93,22 @@
         owner: "libvirt-qemu"
         group: "{{ server_username }}"
 
+    - name: create /srv/data/virtiofs folder for sharing into VMs as Persistent Volume - immich-psql
+      file:
+        path: /srv/data/virtiofs/immich-psql
+        state: directory
+        mode: '0777'
+        owner: "libvirt-qemu"
+        group: "{{ server_username }}"
+
+    - name: create /srv/data/virtiofs folder for sharing into VMs as Persistent Volume - immich
+      file:
+        path: /srv/data/virtiofs/immich
+        state: directory
+        mode: '0777'
+        owner: "libvirt-qemu"
+        group: "{{ server_username }}"
+
     - name: check if netplan bridge file exists
       stat:
         path: "/etc/netplan/01-bridge.yaml"
