--- a/salaserver/02-docker.yaml
+++ b/salaserver/02-docker.yaml
@@ -65,6 +65,12 @@
             special_time: reboot
             job: "/srv/data/docker/runall.sh"
 
+        - name: Run sync of Foto bckup into Immich applicaion after "@reboot"
+          cron:
+            name: "Run sync of Foto bckup into Immich applicaion after reboot"
+            special_time: reboot
+            job: "/srv/data/docker/run-sync.sh"
+
         - name: Update apt and install docker-compose
           apt:
            pkg:
